fix dark mode

--- a/src/styles/dark.less
+++ b/src/styles/dark.less
@@ -36,6 +36,10 @@
         .dark {
             display: block !important;
         }
+
+        a.cs-link {
+          color: var(--bodyTextColorWhite);
+        }
     }
 
     .dark {
