--- a/src/styles/root.less
+++ b/src/styles/root.less
@@ -1115,10 +1115,7 @@
         border: clamp(0.375em, 1.5vw, 0.75em) solid var(--dark);
       }
 
-      .cs-topper {
-        color: var(--primaryLight);
-      }
-
+      .cs-topper,
       .cs-title,
       .cs-text,
       .cs-h3,
